# CERIC-Reference-Spectra-Repository

./: .gitignore  DATA_LICENSE.md  LICENSE  Ni_foil_111.xdi  README.md  pyproject.toml
ceric_xas/: __init__.py  client.py
website/: catalog.json  index.html
website/assets/css/: base.css  beamline.css  cards.css  home.css
website/assets/js/: beamline-page.js  download-zip.js  home-preview.js  search.js  upload.js  xdi-common.js
website/notebooks/: basic_python_api_usage.ipynb
website/pages/astra-solaris/: index.html  manifest.json
website/pages/astra-solaris/files/: Cu2_I_O_Ge_220.xdi  Cu_II_O_Ge_220.xdi  Cu_foil_Ge_220.xdi  Fe2O3_Ge_220.xdi  Fe3O4_Ge_220.xdi  FeO_Ge_220.xdi  FePO4_Ge_111.xdi  FePO4x2H2O_Ge_220.xdi  Fe_OH_3_Ge_220.xdi  Fe_foil_Ge_220.xdi  K2CO3_Ge_220.xdi  K2HPO4_Ge_111.xdi  K2HPO4_Ge_220.xdi  K2SO4_Ge_220.xdi  KCl_Ge_220.xdi  KH2PO4_Ge_111.xdi  KH2PO4_Ge_220.xdi  KHCO3_Ge_220.xdi  KHSO4_Ge_220.xdi  KNO3_Ge_220.xdi  Methionine_InSb_111.xdi  Methionine_Si_111.xdi  MgSO4_InSb_111.xdi  MgSO4_x_7H2O_Si_111.xdi  NH4_2SO4_InSb_111.xdi  NH4_2SO4_Si_111.xdi  Na2HPO4XH2O_Ge_111.xdi  Na2S2O3_Si_111.xdi  Na2S2O3x5H2O_InSb_111.xdi  Na2SO3_InSb_111.xdi  Na2SO4_InSb_111.xdi  NaH2PO4XH2O_Ge_111.xdi  S8_InSb_111.xdi  ZnO_Ge_220.xdi  ZnSO4_Ge_220.xdi  ZnSO4_InSb_111.xdi  ZnSO4_x_7H2O_Si_111.xdi  ZnS_Ge_220.xdi  Zn_foil_Ge_220.xdi
website/pages/lisa-esrf/: index.html  manifest.json
website/pages/lisa-esrf/files/: Ag3AsO4_As_111.xdi  Ag_foil_111.xdi  Ag_foil_311.xdi  As2O3_111.xdi  As2O5_111.xdi  (+162 more)
website/pages/xas-elettra/: index.html  manifest.json
(+40 files in other folders)
