[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ceric-xas"
version = "0.1.0"
description = "Small Python client for the CERIC Reference Spectra Repository static API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Andrea Mecchina et al." }
]
keywords = ["xas", "xdi", "spectroscopy", "ceric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.setuptools.packages.find]
include = ["ceric_xas*"]
